intermediate: ImagePath revision